fix(numeric-stepper-v2): fix label spacing if no values inlay and hover

--- a/projects/deja-js/component/v2/numeric-stepper/numeric-stepper.component.scss
+++ b/projects/deja-js/component/v2/numeric-stepper/numeric-stepper.component.scss
@@ -26,8 +26,13 @@
 
     &[deja-numeric-stepper-form-field="horizontal-inlay"] {
         &:not(.disabled) {
-
             &:hover {
+                &:not([float-label="always"]) {
+                    .mat-form-field-label.mat-empty {
+                        padding-left: 23px
+                    }
+                }
+
                 &[inputAutosizeFormField] {
                     .mat-form-field-infix {
                         padding: 1em 23px;
